HttpServer is multithreaded with worker class. Can now hold multiple connections and keep them open